==========================
http://www.springframework.org


Changes in version 1.1.2 (15.11.2004)
-------------------------------------

General
* fixed compilation on JDK 1.5 with "-source 1.5" (renamed "enum" variables, fixed "getMethod"/"invoke" ambiguities)
* renamed all remaining "*TestSuite" class to "*Tests", for consistent naming of test cases

Package org.springframework.aop
* reworked ProxyFactoryBean and AbstractPrototypeBasedTargetSource to leverage BeanFactory's "getType" method
* moved "invokeJoinpointUsingReflection" method from aop.framework.AopProxyUtils to aop.support.AopUtils
* JdkDynamicAopProxy handles "hashCode" method locally too, in addition to "equals" (mainly for remoting proxies)
* added "perl5" flag to RegexpMethodPointcutAdvisor: on uses ORO (the default), off uses the JDK 1.4 regexp package
* reworked DebugInterceptor to log to Commons Logging at debug level rather than to the console

Package org.springframework.beans
* added "getType(name)" method to BeanFactory interface, checking the type of object that "getBean" would return
* added "getBeansOfType(type)" convenience method to ListableBeanFactory interface, without explicit filters
* moved "FACTORY_BEAN_PREFIX" constant from AbstractBeanFactory superclass up to BeanFactory interface
* refactored AbstractBeanFactory's "getBean" implementation to do more aggressive upfront type checking
* moved "destroyBean" implementation from AbstractAutowireCapableBeanFactory up to AbstractBeanFactory
* refined internal structure and visibilities of AbstractBeanFactory and AbstractAutowireCapableBeanFactory
* reworked DefaultListableBeanFactory's "getBeansOfType" implementation, always detecting FactoryBeans correctly now
* PropertyPlaceholderConfigurer does not try to parse its own bean definition (ignoring unresolvable locations there)
* added PropertyPathFactoryBean, allowing to evaluate the property path of a target bean and expose the result